<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.dagger.mpandroidchart.ui.linechart.LineChartActivity" />

        <variable
            name="vm"
            type="com.dagger.mpandroidchart.ui.linechart.model.LineChartViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/notosanskrbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/linechart_sample"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/aa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/str_station_use_report"
                android:textColor="#000000"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/xmlConstraint"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/item_bg_outline"
                android:onClick="@{() -> vm.setIsTestBooleanData()}">

                <View
                    android:id="@+id/backgroundView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/item_bg_on"
                    android:elevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/guideline1"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/viewTv2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="4dp"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/str_daily"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/guideline1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subScriberTv2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="4dp"
                    android:fontFamily="@font/notosanskrmedium"
                    android:gravity="center"
                    android:text="@string/str_monthly"
                    android:textColor="#909090"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/guideline1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBatteryExchangeCount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintDimensionRatio="320:52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aa">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/notosanskrmedium"
                    android:text="@string/str_battery_change_count"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtBatteryChangeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_toStartOf="@id/txtBatteryChangeFixValue"
                    android:fontFamily="@font/notosanskrbold"
                    android:text="@{vm.batteryChangeCount.toString()}"
                    android:textColor="#000000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txtBatteryChangeFixValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/txtBatteryChangeValue"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/batteryChangeUpDownRl"
                    android:fontFamily="@font/notosanskrmedium"
                    android:text="@string/str_count"
                    android:textColor="#000000" />

                <RelativeLayout
                    android:id="@+id/batteryChangeUpDownRl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/updownbackground"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp">


                    <ImageView
                        android:id="@+id/imgUpOrDown"
                        bindUserBatteryUsageArrowImage="@{vm.batteryChangeComparePreviousDay}"
                        android:layout_width="15dp"
                        android:layout_height="12dp"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY" />

                    <TextView
                        bindJudgementCount="@{vm.batteryChangeComparePreviousDay}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imgUpOrDown"
                        android:fontFamily="@font/notosanskrmedium"
                        android:textColor="#2cafdd"
                        android:textSize="10sp" />

                </RelativeLayout>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBatteryUseCount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintDimensionRatio="320:52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBatteryExchangeCount">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/notosanskrmedium"
                    android:text="@string/str_battery_useage"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtBatteryUseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_toStartOf="@id/txtBatteryUseFixValue"
                    android:fontFamily="@font/notosanskrbold"
                    android:text="@{vm.socUseCount.toString()}"
                    android:textColor="#000000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txtBatteryUseFixValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/txtBatteryUseValue"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/batteryUseUpDownRl"
                    android:fontFamily="@font/notosanskrmedium"
                    android:text="@string/str_count_soc"
                    android:textColor="#000000" />

                <RelativeLayout
                    android:id="@+id/batteryUseUpDownRl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/updownbackground"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp">


                    <ImageView
                        android:id="@+id/imgBatteryUseUpOrDown"
                        bindUserBatteryUsageArrowImage="@{vm.socCountComparePreviousDay}"
                        android:layout_width="15dp"
                        android:layout_height="12dp"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY" />

                    <TextView
                        bindJudgementCount="@{vm.socCountComparePreviousDay}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imgBatteryUseUpOrDown"
                        android:fontFamily="@font/notosanskrmedium"
                        android:textColor="#2cafdd"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:contentPadding="15dp"
            app:layout_constraintDimensionRatio="320:143"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBatteryUseCount">

            <com.dagger.mpandroidchart.ui.linechart.custom.CustomLineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>